@@ -62,7 +62,11 @@ $listDirn	= $this->escape($this->state->get('list.direction'));
 				<td class="center"><?php echo $item->version ?></td>
 				<td class="center"><?php echo @$item->folder != '' ? $item->folder : JText::_('COM_INSTALLER_TYPE_NONAPPLICABLE'); ?></td>
 				<td class="center"><?php echo $client; ?></td>
-				<td><?php echo $item->detailsurl ?></td>
+				<td><?php echo $item->detailsurl ?>
+					<?php if (isset($item->infourl)) : ?>
+					<br /><a href="<?php echo $item->infourl;?>"><?php echo $item->infourl;?></a>
+					<?php endif; ?>
+				</td>
 			</tr>
 		<?php endforeach;?>
 		</tbody>
